--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.lng.lngattendance"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 16
-        versionName "2.4"
+        targetSdkVersion 30
+        versionCode 17
+        versionName "2.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary=true
 
@@ -36,34 +36,36 @@ android {
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation files('libs\\activation.jar')
-    implementation files('libs\\additionnal.jar')
-    implementation files('libs\\mail.jar')
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation files('libs/activation.jar')
+    implementation files('libs/additionnal.jar')
+    implementation files('libs/mail.jar')
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'          // circle image view
     implementation 'com.balysv:material-ripple:1.0.2'                  // ripple effect
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'         // sweetAlert Dailogbox
 
     implementation 'androidx.cardview:cardview:1.0.0'         // cardview
     implementation 'com.wdullaer:materialdatetimepicker:3.2.0'         // date & time picker
-    implementation 'com.android.support:appcompat-v7:29.+'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:29.1'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
     implementation 'com.wang.avi:library:2.1.3'
 
-    implementation 'com.google.android.gms:play-services-vision:17.0.2'
-    implementation 'com.android.support:support-v4:29.+'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v4:29.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.google.code.gson:gson:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //otp Views
 
@@ -78,7 +80,7 @@ dependencies {
     implementation 'com.google.zxing:android-core:3.3.0'
     implementation 'com.github.blikoon:QRCodeScanner:0.1.2'
     implementation 'org.jsoup:jsoup:1.8.3'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation('com.github.felHR85:UsbSerial:6.1.0')
     implementation 'org.jetbrains:annotations-java5:15.0'
 }
